--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
 <style>
+/* global */
 * { box-sizing:border-box; }
 html,body { height:100%; margin:0; }
 body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
 #license-bar, #tooltip-preview, #qr-overlay, #youtube-overlay,
 #vr-button, #top-qr-button { user-select: none; }
-body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relative; background:#000; }
+body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relative; background:#000; text-align:center; }
 
-/* Panorama container */
+/* panorama container */
 #panorama { width:100vw; height:100vh; position:relative; z-index:0; }
 
 /* License bar */
@@ -45,50 +46,61 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   z-index:40;
 }
 #overlay[aria-hidden="true"] { display:none; }
-
 #overlay-content {
-  width: 40vw;
-  height: 53.33vw; /* 4:3 aspect ratio */
-  max-width: 90vw;
-  max-height: 80vh;
+  width:30vw;
+  max-width:90vw;
+  height:auto;
+  max-height:80vh;
   background: rgba(255,255,255,0.18);
   backdrop-filter: blur(10px);
-  padding:28px;
+  padding:24px;
   border-radius:18px;
   color:#fff;
+  font-size:1rem;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
   text-align:center;
-  font-size:1.05rem;
-  line-height:1.4;
-  display:flex; flex-direction:column; justify-content:space-between;
 }
+#overlay-content p, #overlay-content .instructions-group p {
+  margin:6px 0;
+  color:#fff;
+}
+.instructions-group { margin-top:16px; }
 
-#overlay-content p { margin:0 0 10px 0; color:#fff; text-align:center; }
+/* spacing for groups */
+#group-link { margin-bottom:16px; }
+#group-instructions { margin-bottom:16px; }
+#group-dismiss { margin-top:0; }
 
-/* Instructions */
-#instructions-line { text-decoration:underline; font-weight:700; margin-top:6px; color:#fff; }
-#instructions-list { text-align:center; margin-top:8px; line-height:1.6em; color:#fff; }
-#instructions-list p { margin:4px 0; }
+/* Instructions bullets centered */
+#instructions-list { text-align:center; margin:0; padding:0; list-style:none; line-height:1.6em; }
+#instructions-list p::before { content: '• '; }
 
-/* Dismiss message line */
-#dismiss-message { margin-top:12px; font-size:0.95rem; color:#d0d0d0; text-align:center; }
+/* dismiss message line */
+#dismiss-message { font-size:0.95rem; color:#d0d0d0; text-align:center; margin:0; }
 
 /* tooltip preview */
 #tooltip-preview {
   display:none;
   position: fixed;
-  width: 70px;
+  width:400px;
+  max-width:80vw;
+  height:auto;
   background: rgba(0,0,0,0.9);
   color:#fff;
   text-align:center;
-  padding:5px;
-  border-radius:6px;
+  padding:20px;
+  border-radius:12px;
   z-index:9999;
   pointer-events:auto;
-  font-size:0.65rem;
-  line-height:1.1;
+  font-size:1rem;
+  line-height:1.4;
   box-shadow: 0 6px 18px rgba(0,0,0,0.6);
 }
-#tooltip-preview img { width:100%; max-height:35px; object-fit:contain; border-radius:4px; display:block; margin-bottom:4px; }
+#tooltip-preview img { width:100%; height:auto; border-radius:8px; margin-bottom:12px; }
+#tooltip-preview p { font-size:1rem; margin:0; }
 
 /* hotspot panel */
 #hotspot-panel {
@@ -106,13 +118,12 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   max-width:82%;
   z-index:20;
   display:none;
-  margin-bottom:6px;
 }
 
 /* 360 video panel */
 #video-link-panel {
   position: fixed;
-  top: calc(18px + 72px + 12px); /* slightly below hotspot panel */
+  top: calc(18px + 80px); /* under hotspot panel */
   left:50%;
   transform:translateX(-50%);
   background: rgba(0,0,0,0.20);
@@ -147,12 +158,17 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s;
 }
 #qr-content {
-  background: rgba(255,255,255,0.14); backdrop-filter: blur(10px);
-  border-radius:16px; padding:16px;
-  display:flex; flex-direction:column; align-items:center; justify-content:center;
+  display:inline-flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  background: rgba(255,255,255,0.14);
+  backdrop-filter: blur(10px);
+  padding:16px;
+  border-radius:16px;
 }
-#qr-content img { width:auto; max-width:80%; height:auto; border-radius:8px; margin-bottom:6px; }
-#qr-content p { color:#d0d0d0; font-size:0.95rem; text-align:center; }
+#qr-content img { width:100px; height:100px; object-fit:contain; margin-bottom:8px; }
+#qr-content p { margin:0; font-size:0.95rem; color:#d0d0d0; }
 
 /* QR and VR buttons */
 #top-qr-button, #vr-button {
@@ -163,56 +179,63 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 #top-qr-button { top:12px; }
 #vr-button { top:64px; display:none; }
 
-@media (max-width:900px) {
-  #overlay-content { width:70vw; height:52.5vw; padding:18px; font-size:0.98rem; }
-}
-@media (max-width:480px) {
-  #overlay-content { width:85vw; height:63.75vw; padding:14px; font-size:0.95rem; }
-}
+/* responsive */
+@media (max-width:900px) { #overlay-content { width:60vw; } #qr-content img { width:80px; height:80px; } }
+@media (max-width:480px) { #overlay-content { width:75vw; } #qr-content img { width:60px; height:60px; } }
 </style>
 </head>
 <body>
 
+<!-- Panorama -->
 <div id="panorama"></div>
 
+<!-- Intro overlay -->
 <div id="overlay" role="dialog" aria-modal="true">
   <div id="overlay-content" role="document">
-    <div>
+    <div id="group-link">
       <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
-      <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; cursor:pointer;">here</span>.</p>
-
+      <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
+    </div>
+    <div id="group-instructions" class="instructions-group">
       <div id="instructions-line">Instructions</div>
       <div id="instructions-list">
-        <p>• Click and drag to look around.</p>
-        <p>• Scroll to zoom in/out.</p>
-        <p>• Use fullscreen button for best experience.</p>
+        <p>Click and drag to look around.</p>
+        <p>Scroll to zoom in/out.</p>
+        <p>Use fullscreen button for best experience.</p>
       </div>
-
+    </div>
+    <div id="group-dismiss">
       <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
     </div>
   </div>
 </div>
 
+<!-- Tooltip preview -->
 <div id="tooltip-preview" role="tooltip" aria-hidden="true">
   <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview">
   <div><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a></div>
 </div>
 
+<!-- Hotspot panel -->
 <div id="hotspot-panel" aria-hidden="true">
   Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
   The Ritz-Carlton can be seen on the distant cliffs.<br>
   The coastal shores are lined with miles of golf courses.
 </div>
 
+<!-- 360 video panel -->
 <div id="video-link-panel" aria-hidden="true">
   <span id="manhattan-video-text" style="text-decoration:underline; color:#9fd6ff;">Click Here to Watch a 360 Video of this Location</span>
 </div>
 
+<!-- License bar -->
 <div id="license-bar">Loading license...</div>
 
+<!-- QR and VR buttons -->
 <button id="top-qr-button" aria-controls="qr-overlay" aria-expanded="false">QR</button>
 <button id="vr-button" aria-hidden="true">VR</button>
 
+<!-- YouTube overlay -->
 <div id="youtube-overlay" aria-hidden="true">
   <div id="youtube-content">
     <iframe id="youtube-frame" allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
@@ -220,6 +243,7 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   </div>
 </div>
 
+<!-- QR overlay -->
 <div id="qr-overlay" aria-hidden="true">
   <div id="qr-content">
     <img src="VRQR.png" alt="QR code">
@@ -230,6 +254,7 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 <script>
 const panoURL = "https://i.imgur.com/FYdmUI3.jpeg";
+
 const viewer = pannellum.viewer('panorama', {
   type: 'equirectangular',
   panorama: panoURL,
@@ -255,57 +280,48 @@ const youtubeOverlay = document.getElementById('youtube-overlay');
 const youtubeFrame = document.getElementById('youtube-frame');
 const licenseBar = document.getElementById('license-bar');
 
-/* LICENSE load */
-fetch('LICENSE').then(r => r.ok ? r.text() : Promise.reject('no')).then(text => {
-  licenseBar.textContent = text;
-}).catch(()=>{ licenseBar.textContent = 'LICENSE file not found.'; });
-
 /* Overlay dismissal */
-document.addEventListener('click', (ev) => {
-  if(overlay.style.display !== 'none'){
-    if(!ev.target.closest('#preview-link')) overlay.style.display='none';
-    hotspotPanel.style.display='block';
-    videoLinkPanel.style.display='block';
-  }
-  if(qrOverlay.style.display !== 'none' && !ev.target.closest('#qr-content')) qrOverlay.style.display='none';
-  if(youtubeOverlay.style.display !== 'none' && !ev.target.closest('#youtube-content')) youtubeOverlay.style.display='none';
+document.addEventListener('click', (ev)=>{
+  if(ev.target.closest('#preview-link') || ev.target.closest('#youtube-content')) return;
+  if(overlay.style.display !== 'none') { overlay.setAttribute('aria-hidden','true'); overlay.style.display='none'; hotspotPanel.style.display='block'; videoLinkPanel.style.display='block'; }
+  if(youtubeOverlay.style.display==='flex') { youtubeOverlay.style.opacity=0; setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280);}
+  if(qrOverlay.style.display==='flex') { qrOverlay.style.opacity=0; setTimeout(()=>{qrOverlay.style.display='none';},280);}
 });
 
-/* Preview tooltip */
+/* Tooltip hover tracking */
 function showTooltip() {
-  tooltip.style.display='block';
-  tooltip.setAttribute('aria-hidden','false');
-  const rect = previewLink.getBoundingClientRect();
-  const ttWidth = tooltip.offsetWidth;
-  const ttHeight = tooltip.offsetHeight;
-  let top = rect.top - ttHeight - 10;
-  let left = rect.left + rect.width/2 - ttWidth/2;
-  if (top < 8) top = rect.bottom + 10;
-  if (left < 8) left = 8;
-  if (left + ttWidth > window.innerWidth - 8) left = window.innerWidth - ttWidth - 8;
-  tooltip.style.left = Math.round(left) + 'px';
-  tooltip.style.top = Math.round(top) + 'px';
+  tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false');
+  const rect=previewLink.getBoundingClientRect();
+  const ttWidth=tooltip.offsetWidth, ttHeight=tooltip.offsetHeight;
+  let top=rect.top-ttHeight-10, left=rect.left+rect.width/2-ttWidth/2;
+  if(top<8) top=rect.bottom+10;
+  if(left<8) left=8;
+  if(left+ttWidth>window.innerWidth-8) left=window.innerWidth-ttWidth-8;
+  tooltip.style.left=Math.round(left)+'px'; tooltip.style.top=Math.round(top)+'px';
 }
 previewLink.addEventListener('mouseenter', showTooltip);
-previewLink.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
+previewLink.addEventListener('mousemove', showTooltip);
+previewLink.addEventListener('mouseleave', ()=>{ setTimeout(()=>{ if(!tooltip.matches(':hover')&&!previewLink.matches(':hover')){ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); }},80); });
 tooltip.addEventListener('mouseenter', showTooltip);
 tooltip.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
 previewLink.addEventListener('click', (e)=>{ e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
+tooltipLink.addEventListener('click', (e)=>{ e.stopPropagation(); });
 
-/* 360 video */
-videoLinkPanel.addEventListener('click', (e)=>{
-  e.stopPropagation();
-  youtubeFrame.src="https://www.youtube-nocookie.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
-  youtubeOverlay.style.display='flex';
-  requestAnimationFrame(()=> youtubeOverlay.style.opacity=1);
-});
+/* 360 video panel -> YouTube modal */
+videoLinkPanel.addEventListener('click', (e)=>{ e.stopPropagation(); youtubeFrame.src="https://www.youtube-nocookie.com/embed/sfYM1-_WbWk?rel=0&autoplay=1"; youtubeOverlay.style.display='flex'; requestAnimationFrame(()=>youtubeOverlay.style.opacity=1); });
+youtubeOverlay.addEventListener('click', ()=>{ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280); });
 
-/* QR panel */
-qrBtn.addEventListener('click', (e)=>{ e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=> qrOverlay.style.opacity=1); });
-qrContent.addEventListener('click', ()=> qrOverlay.style.display='none');
+/* QR button */
+qrBtn.addEventListener('click', (e)=>{ e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=>qrOverlay.style.opacity=1); });
+qrOverlay.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=>{ qrOverlay.style.display='none';},280); });
+qrContent.addEventListener('click',(e)=>{ qrOverlay.style.opacity=0; setTimeout(()=>{ qrOverlay.style.display='none';},280); });
 
-/* VR button (placeholder) */
-vrBtn.addEventListener('click', (e)=>{ e.stopPropagation(); window.open('vr.html','_blank','noopener'); });
+/* VR button */
+async function detectVRHeadset(){ if(navigator.xr&&navigator.xr.isSessionSupported){try{const s=await navigator.xr.isSessionSupported('immersive-vr'); if(s) return {manufacturer:'WebXR', model:'immersive-vr'};}catch{} } return null;}
+vrBtn.addEventListener('click',(e)=>{ e.stopPropagation(); const w=window.open('vr.html','_blank','noopener'); if(!w) alert('Popup blocked. Allow popups for immersive VR.'); });
+
+/* LICENSE loading */
+fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(t=>licenseBar.textContent=t).catch(()=>{ licenseBar.textContent='LICENSE file not found.'; });
 </script>
 </body>
 </html>
