--- a/index.html
+++ b/index.html
@@ -20,23 +20,24 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 /* Intro overlay */
 #overlay { position: fixed; inset:0; background: rgba(0,0,0,0.40); display:flex; align-items:center; justify-content:center; z-index:40; }
 #overlay[aria-hidden="true"] { display:none; }
-#overlay-content { width:20vw; max-width:45vw; height:auto; max-height:35vh; background: rgba(255,255,255,0.18); backdrop-filter: blur(10px); border-radius:18px; padding:24px; color:#fff; text-align:center; display:flex; flex-direction:column; justify-content:flex-start; gap:8px; margin:0 auto; font-size:1.5em; }
-#overlay-content > p:nth-of-type(1) { margin:0 0 0.5em 0; } /* Bio */
-#overlay-content > p:nth-of-type(2) { margin:0.5em 0 0.5em 0; font-size:1em; } /* Link line */
-#instructions-line { font-weight:700; text-decoration:underline; margin-top:0.5em; color:#fff; }
-#instructions-list { margin:0.5em 0 0 0; line-height:1.4em; color:#fff; }
-#instructions-list p { margin:0.25em 0; text-align:center; }
-#dismiss-message { margin-top:0.5em; font-size:0.95rem; color:#d0d0d0; text-align:center; }
+#overlay-content { width:40vw; height:26.66vw; /* 3:2 ratio */ max-width:90vw; max-height:70vh; background: rgba(255,255,255,0.18); backdrop-filter: blur(10px); border-radius:18px; padding:24px; color:#fff; text-align:center; display:flex; flex-direction:column; justify-content:flex-start; gap:12px; margin:0 auto; font-size:1.5rem; line-height:1.3; }
+#overlay-content p { margin:0; }
+#instructions-line { font-weight:700; text-decoration:underline; margin-top:12px; color:#fff; }
+#instructions-list { margin:6px 0 0 0; line-height:1.6em; color:#fff; }
+#instructions-list p { margin:4px 0; text-align:center; }
+#dismiss-message { margin-top:6px; font-size:1rem; color:#d0d0d0; text-align:center; }
+hr.divider { border:1px solid #888; width:80%; margin:8px auto; }
 
 /* tooltip preview */
-#tooltip-preview { display:none; position:fixed; max-width:200px; width:auto; background: rgba(0,0,0,0.9); color:#fff; text-align:center; padding:4px; border-radius:6px; z-index:9999; pointer-events:auto; font-size:0.85rem; line-height:1.2; box-shadow:0 6px 18px rgba(0,0,0,0.6); display:flex; flex-direction:column; align-items:center; justify-content:center; }
-#tooltip-preview img { max-width:100%; height:auto; border-radius:6px; }
+#tooltip-preview { display:none; position:fixed; z-index:9999; background: rgba(0,0,0,0.9); color:#fff; text-align:center; padding:8px; border-radius:6px; pointer-events:auto; font-size:0.95rem; line-height:1.2; box-shadow:0 6px 18px rgba(0,0,0,0.6); width:max-content; height:auto; }
+#tooltip-preview img { width:120px; height:auto; border-radius:6px; object-fit:contain; }
+#tooltip-preview a { color:#fff; text-decoration:underline; }
 
 /* hotspot panel */
 #hotspot-panel { position: fixed; top:18px; left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:12px 18px; border-radius:14px; color:#fff; font-size:0.98rem; text-align:center; max-width:82%; z-index:20; display:none; }
 
 /* 360 video panel */
-#video-link-panel { position: fixed; top: calc(48px + 60px + 12px); left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:10px 14px; border-radius:12px; color:#fff; font-size:0.96rem; text-align:center; max-width:66%; z-index:20; cursor:pointer; display:none; }
+#video-link-panel { position: fixed; top:calc(48px + 60px + 12px); left:50%; transform:translateX(-50%); background: rgba(0,0,0,0.20); backdrop-filter: blur(10px); padding:10px 14px; border-radius:12px; color:#fff; font-size:0.96rem; text-align:center; max-width:66%; z-index:20; cursor:pointer; display:none; }
 
 /* youtube modal */
 #youtube-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
@@ -45,8 +46,8 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 
 /* qr overlay */
 #qr-overlay { display:none; position:fixed; inset:0; background: rgba(0,0,0,0.55); z-index:70; align-items:center; justify-content:center; opacity:0; transition:opacity .28s; }
-#qr-content { display:flex; flex-direction:column; align-items:center; justify-content:center; padding:16px; border-radius:16px; background: rgba(255,255,255,0.14); backdrop-filter: blur(10px); width:max-content; height:max-content; gap:12px; }
-#qr-content img { width:120px; height:120px; object-fit:contain; border-radius:16px; }
+#qr-content { display:flex; flex-direction:column; align-items:center; justify-content:center; padding:12px; border-radius:16px; background: rgba(255,255,255,0.14); backdrop-filter: blur(10px); width:max-content; height:max-content; gap:8px; }
+#qr-content img { width:512px; height:512px; object-fit:contain; border-radius:32px; }
 #qr-content p { margin:0; color:#d0d0d0; font-size:0.95rem; text-align:center; }
 
 /* QR and VR buttons */
@@ -55,8 +56,8 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 #vr-button { top:64px; display:none; }
 
 /* responsive adjustments */
-@media(max-width:900px){ #overlay-content{width:43vw;height:auto;padding:18px;font-size:1.2em;} #video-link-panel{top:calc(18px+72px+10px);max-width:86%;} }
-@media(max-width:480px){ #overlay-content{width:85vw;height:auto;padding:14px;font-size:1em;} #video-link-panel{top:calc(18px+72px+10px);max-width:88%;} #hotspot-panel{font-size:0.9rem; padding:10px;} }
+@media(max-width:900px){ #overlay-content{width:86vw;height:auto;padding:18px;font-size:1.25rem;} #video-link-panel{top:calc(18px+72px+10px);max-width:86%;} }
+@media(max-width:480px){ #overlay-content{width:92vw;height:auto;padding:14px;font-size:1rem;} #video-link-panel{top:calc(18px+72px+10px);max-width:88%;} #hotspot-panel{font-size:0.9rem; padding:10px;} }
 </style>
 </head>
 <body>
@@ -65,8 +66,10 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 
 <div id="overlay" role="dialog" aria-modal="true">
   <div id="overlay-content" role="document">
-    <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
-    <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
+    <p style="font-size:1.5rem;">Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
+    <p style="margin-top:8px;">If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
+
+    <br><hr class="divider"><br>
 
     <div id="instructions-line">Instructions</div>
     <div id="instructions-list">
@@ -81,7 +84,7 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 
 <div id="tooltip-preview" role="tooltip" aria-hidden="true">
   <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview">
-  <div style="font-size:0.9rem; text-align:center;"><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a></div>
+  <div style="font-size:0.9rem;"><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener">https://linktr.ee/lexofdystopia</a></div>
 </div>
 
 <div id="hotspot-panel" aria-hidden="true">
@@ -146,20 +149,22 @@ function dismissOverlay(e){
 }
 overlay.addEventListener('click', dismissOverlay);
 
-/* tooltip hover tracking cursor and dynamic sizing */
-previewLink.addEventListener('mouseenter', ()=>{ tooltip.style.display='flex'; tooltip.setAttribute('aria-hidden','false'); });
+/* tooltip hover tracking cursor */
+function showTooltip(){ tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false'); tooltip.offsetHeight; }
+previewLink.addEventListener('mouseenter', showTooltip);
 previewLink.addEventListener('mousemove', e=>{
-  const rect=previewLink.getBoundingClientRect();
-  const padding=8;
-  let top=rect.bottom + 10;
-  let left=rect.left + rect.width/2 - tooltip.offsetWidth/2;
-  if(left<padding) left=padding;
-  if(left+tooltip.offsetWidth>window.innerWidth-padding) left=window.innerWidth-tooltip.offsetWidth-padding;
-  tooltip.style.left=Math.round(left)+'px';
-  tooltip.style.top=Math.round(top)+'px';
+  const ttWidth = tooltip.offsetWidth;
+  const ttHeight = tooltip.offsetHeight;
+  let top = e.clientY - ttHeight - 10;
+  let left = e.clientX - ttWidth/2;
+  if(top < 8) top = e.clientY + 10;
+  if(left < 8) left = 8;
+  if(left + ttWidth > window.innerWidth - 8) left = window.innerWidth - ttWidth - 8;
+  tooltip.style.left = Math.round(left)+'px';
+  tooltip.style.top = Math.round(top)+'px';
 });
 previewLink.addEventListener('mouseleave', ()=>{ setTimeout(()=>{ if(!tooltip.matches(':hover')&&!previewLink.matches(':hover')){ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); } },80); });
-tooltip.addEventListener('mouseenter', ()=>{ tooltip.style.display='flex'; tooltip.setAttribute('aria-hidden','false'); });
+tooltip.addEventListener('mouseenter', showTooltip);
 tooltip.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
 previewLink.addEventListener('click', e=>{ e.stopPropagation(); e.preventDefault(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
 tooltipLink.addEventListener('click', e=>{ e.stopPropagation(); });
@@ -176,15 +181,6 @@ youtubeOverlay.addEventListener('click', ()=>{ youtubeOverlay.style.opacity=0; s
 qrBtn.addEventListener('click', e=>{ e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=>qrOverlay.style.opacity=1); });
 qrOverlay.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); });
 qrContent.addEventListener('click', e=>{ e.stopPropagation(); qrOverlay.style.opacity=0; setTimeout(()=> qrOverlay.style.display='none',300); });
-
-/* VR detection */
-async function detectVRHeadset(){
-  if(navigator.xr&&navigator.xr.isSessionSupported){ try{ const supported=await navigator.xr.isSessionSupported('immersive-vr'); if(supported) return {manufacturer:'WebXR', model:'immersive-vr'}; } catch(err){} }
-  const ua=navigator.userAgent||''; if(/OculusBrowser|Oculus|Quest|Meta Quest/i.test(ua)) return {manufacturer:'Oculus', model:'Quest'}; return null;
-}
-
-/* VR button */
-vrBtn.addEventListener('click', e=>{ e.stopPropagation(); const w=window.open('vr.html','_blank','noopener'); if(!w) alert('Popup blocked. Allow popups for immersive VR.'); });
 
 /* ESC closes overlays */
 document.addEventListener('keydown', e=>{
