--- a/index.html
+++ b/index.html
@@ -20,31 +20,14 @@ body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-ba
 /* Intro overlay */
 #overlay { position: fixed; inset:0; background: rgba(0,0,0,0.40); display:flex; align-items:center; justify-content:center; z-index:40; }
 #overlay[aria-hidden="true"] { display:none; }
-#overlay-content {
-    width:20vw; /* half previous width */
-    height:26.66vw; /* keep tall */
-    max-width:90vw;
-    max-height:70vh;
-    background: rgba(255,255,255,0.18);
-    backdrop-filter: blur(10px);
-    border-radius:18px;
-    padding:24px;
-    color:#fff;
-    text-align:center;
-    display:flex;
-    flex-direction:column;
-    justify-content:flex-start;
-    align-items:center;
-    gap:12px;
-    font-size:1.5rem;
-    line-height:1.3;
-}
-#overlay-content p { margin:0; }
-#instructions-line { font-weight:700; text-decoration:underline; margin-top:12px; color:#fff; text-align:center; }
-#instructions-list { margin:6px 0 0 0; line-height:1.6em; color:#fff; text-align:center; }
-#instructions-list p { margin:4px 0; text-align:center; }
-hr.divider { border:1px solid #fff; width:80%; margin:8px auto; }
+#overlay-content { width:40vw; max-width:90vw; height:auto; max-height:70vh; background: rgba(255,255,255,0.18); backdrop-filter: blur(10px); border-radius:18px; padding:24px; color:#fff; text-align:center; display:flex; flex-direction:column; justify-content:flex-start; gap:12px; margin:0 auto; }
+#overlay-content img { width:80px; height:auto; margin-bottom:12px; }
+#overlay-content p { margin:0; text-align:center; }
+#instructions-line { font-weight:700; text-decoration:underline; margin-top:8px; color:#fff; }
+#instructions-list { margin:6px 0 0 0; line-height:1.6em; color:#fff; }
+#instructions-list p { margin:6px 0; text-align:center; }
 #dismiss-message { margin-top:0; font-size:0.95rem; color:#d0d0d0; text-align:center; line-height:1.4; }
+hr.divider { border:0; border-top:1px solid #fff; margin:16px 0; }
 
 /* tooltip preview */
 #tooltip-preview { display:none; position:fixed; width:70px; background: rgba(0,0,0,0.9); color:#fff; text-align:center; padding:4px; border-radius:6px; z-index:9999; pointer-events:auto; font-size:0.85rem; line-height:1.2; box-shadow:0 6px 18px rgba(0,0,0,0.6); }
@@ -82,6 +65,7 @@ hr.divider { border:1px solid #fff; width:80%; margin:8px auto; }
 
 <div id="overlay" role="dialog" aria-modal="true">
   <div id="overlay-content" role="document">
+    <img src="LexIcon.png" alt="Lex Icon" style="width:80px; height:auto; margin-bottom:12px;">
     <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
     <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
 
